Docs: bring hardened docs to v3 (selectable AEAD, mlock via FFM, native KDF)
Align the MkDocs security/usage pages, architecture docs, and README with the
shipped v3 hardened crypto:

- Selectable AEAD: everywhere the AEAD was described as fixed "AES-256-GCM" now
  reads AES-256-GCM (default) or ChaCha20-Poly1305 via Builder.aead(AeadId) --
  README, usage/hardened, architecture/index, security/{index,backend-choice,
  sample-configurations,backup-and-recovery}. (The keystore KEK stays AES-256-GCM;
  it is internal, not the selectable item AEAD.)
- Memory locking: defense-mechanisms / sample-configurations / desktop-deployment
  no longer say "mlockall via JNA, the consumer's job" -- they document
  Builder.lockMemory(true) (mlockall via the JDK FFM API), the
  --enable-native-access=de.swiesend.secretservice.hardened flag, RLIMIT_MEMLOCK,
  and that HardenedStatus.memoryLocked() reports the real result. Added a
  cipher-suite + JVM-hardening example to usage/hardened and a pointer from
  usage/tpm2 and the README.
- Native KDF: note HKDF-SHA256 runs on the native javax.crypto.KDF (JEP 510);
  removed the dropped at.favre.lib:hkdf from the README deps cell; added RFC 8439
  and JEP 510 to the reference list.
- Envelope v3: the architecture wire-format diagram now shows the aead_id/kdf_id
  selector bytes and item_id, and clarifies the SSv1 magic vs. the version byte
  (=3). Replaced a stale TOTP "step rollover" test-evidence row with the
  header-tamper, ChaCha round-trip, and fuzz tests.
- Custom-provider example: "two methods + optional close()" (was "four"), with a
  close() scrub added.
- Javadoc: corrected stale TOTP/AES-GCM wording in HardenedCollection,
  HardenedCollectionInterface, and HybridKem.